# play-frontend-find-usages

./: .gitignore  README.md  pyproject.toml  shell.nix
datasette/: README.md  metadata.yml
datasette/plugins/: render_code_sample.html.jinja2  render_code_sample.py
datasette/static/: extra_styles.css
find_usages/: cli.py  core.py  outputs.py  ripgrep.py  utils.py
find_usages/resources/: components.csv
fixtures/: via_all_methods.out  via_dependency_injection.out  via_deprecated_static_helper.out  via_inline_instantiation.out  via_nunjucks.out
fixtures/via_all_methods/example-frontend-1/: multiline.scala.html
fixtures/via_all_methods/example-frontend-2/: multiline.scala.html  oneline.scala.html
fixtures/via_all_methods/example-frontend-3/: multiline.scala.html  oneline.scala.html
fixtures/via_dependency_injection/example-frontend/: oneline.scala.html
fixtures/via_inline_instantiation/example-frontend/: oneline.scala.html  passed-to-child.scala.html  used-immediately.scala.html
fixtures/via_nunjucks/example-frontend/: multiline.njk  oneline.njk
tests/: conftest.py  test_core.py  utils.py
