[tool.poetry]
name = "find_usages"
version = "0.1.0"
description = ""
authors = ["Oscar Duignan <100650+oscarduignan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiostream = "^0.4.3"
aiofile = "^3.5.1"
sqlite-utils = "^3.12"
datasette = "^0.58"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.6b0"}
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
find-usages = 'find_usages.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
